--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.url= jdbc:mysql://localhost:3306/onlineshopping
 spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=create
+
+spring.http.multipart.max-file-size=500KB
+spring.http.multipart.max-request-size=500KB
