--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.mvc.view.suffix: .jsp
 spring.datasource.url= jdbc:mysql://localhost:3306/onlineshopping
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-update
 
 spring.http.multipart.max-file-size=500KB
 spring.http.multipart.max-request-size=500KB
